# task-hw-06

./: .gitignore  mypy.ini  pyproject.toml
student_db/: alembic.ini  config.ini  models.py  my_select.py  requirements.txt  seed.py
student_db/alembic/: env.py
student_db/alembic/versions/: 6fe47316ae69_initial_migration.py
