[project]
name = "goit-pythonweb-hw-06"
version = "0.1.0"
description = "student-db on SQLAlchemy"
authors = [
    {name = "Dmytro Zhuk",email = "140021292+dm-zhuk@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
